--- a/docs/troubleshooting/connection-error.mdx
+++ b/docs/troubleshooting/connection-error.mdx
@@ -68,7 +68,7 @@ The `CORS_ALLOW_ORIGIN` setting is crucial for WebSocket functionality. If you s
 
 ### Reverse Proxy / SSL/TLS Configuration
 
-For reverse proxy and TLS setups, check our [tutorials here](/docs/tutorials/https).
+For reverse proxy and TLS setups, check our [tutorials here](/docs/tutorials/https/).
 
 ### WebSocket Troubleshooting
 
