--- a/docs/enterprise/index.mdx
+++ b/docs/enterprise/index.mdx
@@ -63,11 +63,11 @@ If you are a **consulting agency**, **AI services provider**, **solutions provid
 
 Please understand:
 
-- We proactively select partners who align with our mission, vision, and values.
-- Being on our waitlist does not guarantee a response. If we feel there’s a strong fit, you’ll hear from us.
-- We receive a high volume of requests and cannot respond to every inquiry. Please do not follow up or send additional messages.
-- We prioritize mature organizations, companies less than 5 years old are not eligible, except in truly exceptional cases.
-- Our program is currently at full capacity. We will reach out at our discretion should an opportunity arise.
+- We proactively select partners who **align with our mission, vision, and values**.
+- Being on our waitlist **does not guarantee a response**. If we feel there’s a strong fit, you’ll hear from us.
+- We receive **a high volume of requests** and cannot respond to every inquiry. Please **do not follow up** or send additional messages.
+- We prioritize mature organizations, companies **less than 5 years old are not eligible**, except in truly exceptional cases.
+- Our program is currently at **full capacity**. We will reach out at our discretion should an opportunity arise.
 
 <details>
 <summary>**If you have an end-client** who is ready to move forward with us and is committed to purchasing a rebrand (enterprise) license immediately...</summary>
